cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_227.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/x509/v3_genn.c:101: error: DEAD_STORE
  The value written to &result (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/x509/v3_genn.c:101:5: Write of unused value
99.   int OTHERNAME_cmp(OTHERNAME *a, OTHERNAME *b)
100.   {
101.       int result = -1;
           ^
102.   
103.       if (!a || !b)
